--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.5.0",
     "fulcrum-schema": "fulcrumapp/fulcrum-schema#v2",
     "fulcrum-sync-plugin": "^1.0.1",
+    "pg-format": "^1.0.4",
     "request": "^2.81.0"
   }
 }
